--- a/app/src/main/res/menu/paramedic_navigation_drawer.xml
+++ b/app/src/main/res/menu/paramedic_navigation_drawer.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single" >
 
-        <item android:title="Break" android:icon="@drawable/ic_baseline_list_alt_24"/>
-        <item android:title="Options" android:icon="@drawable/ic_sharp_settings_24" />
+        <item android:title="@string/breakText" android:icon="@drawable/ic_baseline_list_alt_24"/>
+        <item android:title="@string/options" android:icon="@drawable/ic_sharp_settings_24" />
         <item android:title="@string/log_out" android:icon="@drawable/ic_sharp_logout_24" />
     </group>
 </menu>
