Working rating tutorials

--- a/app/src/main/res/layout/tutorial_view_item.xml
+++ b/app/src/main/res/layout/tutorial_view_item.xml
@@ -54,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:tag="@{tutorial.id}"
                 android:numStars="5"
                 android:rating="@{tutorial.averageRating*5}"
                 app:layout_constraintStart_toStartOf="parent"
