Loading thumbnails with error handling and image resize

--- a/app/src/main/res/layout/tutorial_view_item.xml
+++ b/app/src/main/res/layout/tutorial_view_item.xml
@@ -26,8 +26,9 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:layout_marginTop="10dp"
                 android:id="@+id/thumbnail"
-                android:layout_width="200dp"
+                android:layout_width="300dp"
                 android:layout_height="200dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
@@ -62,8 +63,8 @@
 
             <TextView
                 android:id="@+id/kind"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:text="@{tutorial.tutorialType}"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
