--- a/app/src/main/res/layout/fragment_ambulance_break.xml
+++ b/app/src/main/res/layout/fragment_ambulance_break.xml
@@ -17,120 +17,42 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/type_label"
+        android:id="@+id/explaining_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:text="@string/break_type"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="@id/header"
+        android:text="@string/break_explaining_text"
+        android:textSize="16sp"
+        android:layout_marginTop="3dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:id="@+id/type_input"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:boxCornerRadiusBottomEnd="20dp"
-        app:boxCornerRadiusBottomStart="20dp"
-        app:boxCornerRadiusTopEnd="20dp"
-        app:boxCornerRadiusTopStart="20dp"
-        app:layout_constraintEnd_toEndOf="@id/header"
-        app:layout_constraintStart_toStartOf="@id/header"
-        app:layout_constraintTop_toBottomOf="@+id/type_label">
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:inputType="none"
-            android:text="@string/choose" />
-    </com.google.android.material.textfield.TextInputLayout>
-    <TextView
-        android:id="@+id/time_from_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:text="@string/start_time"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="@id/header"
-        app:layout_constraintTop_toBottomOf="@id/type_input"/>
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/start_date_field"
-        android:layout_width="@id/header"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
-        android:hint="HH:MM"
-        app:endIconMode="clear_text"
-        app:layout_constraintStart_toStartOf="@id/header"
-        app:layout_constraintEnd_toEndOf="@id/header"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:boxCornerRadiusBottomEnd="20dp"
-        app:boxCornerRadiusBottomStart="20dp"
-        app:startIconDrawable="@drawable/ic_twotone_access_time_24"
-        app:startIconCheckable="true"
-        app:boxCornerRadiusTopEnd="20dp"
-        app:boxCornerRadiusTopStart="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/time_from_label">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/start_date_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="time" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/time_to_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:text="@string/end_time"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="@id/header"
-        app:layout_constraintTop_toBottomOf="@id/start_date_field"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/end_date_field"
-        android:layout_width="@id/header"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
-        android:hint="HH:MM"
-        app:endIconMode="clear_text"
-        app:layout_constraintStart_toStartOf="@id/header"
-        app:layout_constraintEnd_toEndOf="@id/header"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:boxCornerRadiusBottomEnd="20dp"
-        app:boxCornerRadiusBottomStart="20dp"
-        app:startIconCheckable="true"
-        app:boxCornerRadiusTopEnd="20dp"
-        app:startIconDrawable="@drawable/ic_twotone_access_time_24"
-        app:boxCornerRadiusTopStart="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/time_to_label">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/end_date_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="time" />
-    </com.google.android.material.textfield.TextInputLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="330dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/medic_break2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/explaining_text" />
 
     <RelativeLayout
         android:id="@+id/parentRelative"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/end_date_field"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
+        app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <Button
-            android:id="@+id/button"
-            style="@style/Widget.Material3.Button"
+            android:id="@+id/breakButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add"
@@ -140,12 +62,12 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button2"
-            style="@style/Widget.Material3.Button"
+            android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/button"
+            android:layout_toRightOf="@id/breakButton"
+            android:backgroundTint="@color/red"
             android:text="@string/incident_cancel_button"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
