Top app bar indication of being on a break, first draft of calling for backup

--- a/app/src/main/res/layout-sw600dp/fragment_ambulance_break.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_ambulance_break.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/ambulance_break"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
         android:textColor="@color/green_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,19 +20,21 @@
         android:id="@+id/explaining_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="3dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/break_explaining_text"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="330dp"
-        android:layout_height="300dp"
+        android:layout_width="630dp"
+        android:layout_height="430dp"
         android:layout_marginTop="30dp"
         android:src="@drawable/medic_break2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +59,7 @@
             android:layout_height="wrap_content"
             android:text="@string/startBreak"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -70,6 +73,7 @@
             android:backgroundTint="@color/red"
             android:text="@string/incident_cancel_button"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
