--- a/app/src/main/res/layout-sw600dp/fragment_paramedic_call_for_support.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_paramedic_call_for_support.xml
@@ -107,7 +107,7 @@
         app:layout_constraintTop_toBottomOf="@+id/locationInput">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/callButton"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -118,12 +118,12 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/cancelButton"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/button"
+            android:layout_toRightOf="@id/callButton"
             android:text="@string/incident_cancel_button"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
