Paramedic Settings screen

--- a/app/src/main/res/layout-sw600dp/fragment_ambulance_break.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_ambulance_break.xml
@@ -20,12 +20,12 @@
         android:id="@+id/explaining_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:paddingHorizontal="150dp"
         android:layout_marginTop="3dp"
-        android:layout_marginEnd="10dp"
         android:text="@string/break_explaining_text"
         android:textAlignment="center"
         android:textColor="@color/black"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
