Layout fixes for user side of app, working tutorials rating/right average ratings display. Translated incident options

--- a/app/src/main/res/layout-night/fragment_allergy_details.xml
+++ b/app/src/main/res/layout-night/fragment_allergy_details.xml
@@ -133,20 +133,22 @@
             android:layout_height="wrap_content"
             android:text="@string/update"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/delete_button"
+            style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Widget.Material3.Button"
-            android:backgroundTint="@color/red"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/button"
+            android:backgroundTint="@color/red"
             android:text="@string/delete"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -160,6 +162,7 @@
             android:layout_toRightOf="@id/delete_button"
             android:text="@string/incident_cancel_button"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
