--- a/app/src/main/res/layout-night/fragment_blood_type_form.xml
+++ b/app/src/main/res/layout-night/fragment_blood_type_form.xml
@@ -21,10 +21,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:text="@string/blood_type_question"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
             android:textColor="@color/mustard"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -147,6 +148,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="140dp"
             android:text="@string/send"
+            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,6 +163,7 @@
             android:layout_marginTop="20dp"
             android:layout_toRightOf="@id/sendButton"
             android:text="@string/incident_cancel_button"
+            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
