--- a/app/src/main/res/layout-night/fragment_allergy_form.xml
+++ b/app/src/main/res/layout-night/fragment_allergy_form.xml
@@ -126,6 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/send"
+            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,6 +140,7 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/button"
             android:text="@string/incident_cancel_button"
+            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
