--- a/app/src/main/res/layout-night/fragment_incident_location_picker.xml
+++ b/app/src/main/res/layout-night/fragment_incident_location_picker.xml
@@ -15,7 +15,6 @@
             style="@style/TextAppearance.MaterialComponents.Headline4"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:text="@string/choose_your_location"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
@@ -24,11 +23,11 @@
 
         <org.osmdroid.views.MapView
             android:id="@+id/map"
+            android:layout_width="300dp"
+            android:layout_height="450dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:padding="5dp"
-            android:layout_width="300dp"
-            android:layout_height="450dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -52,6 +51,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:text="   "
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/map"
             app:layout_constraintTop_toBottomOf="@+id/map" />
@@ -61,6 +61,7 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:text="OK"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/map"
             app:layout_constraintTop_toBottomOf="@+id/map" />
