--- a/app/src/main/res/layout-night/fragment_medical_info_main.xml
+++ b/app/src/main/res/layout-night/fragment_medical_info_main.xml
@@ -31,6 +31,8 @@
             android:layout_marginTop="15dp"
             android:text="Jan Kowalski"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+            android:textColor="@color/white"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,6 +44,7 @@
             android:layout_marginVertical="10dp"
             android:background="@drawable/rounded_corners"
             android:text="@string/band"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/userName"
             app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -50,10 +53,12 @@
         <TableLayout
             android:id="@+id/allergies"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="230dp"
             android:layout_margin="10dp"
             android:isScrollContainer="true"
+            android:scrollbarStyle="insideOverlay"
             android:scrollbars="vertical"
+            android:scrollIndicators="top|bottom"
             android:shrinkColumns="*"
             android:stretchColumns="*"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,10 +103,13 @@
         <TableLayout
             android:id="@+id/diseases"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="230dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="30dp"
             android:isScrollContainer="true"
+            android:scrollbarStyle="insideOverlay"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollIndicators="top|bottom"
             android:scrollbars="vertical"
             android:shrinkColumns="*"
             android:stretchColumns="*"
@@ -140,6 +148,7 @@
             android:padding="10dp"
             android:text="@string/add"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
