--- a/app/src/main/res/layout-night/tutorial_view_item.xml
+++ b/app/src/main/res/layout-night/tutorial_view_item.xml
@@ -54,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:progressTint="@color/mustard"
                 android:layout_marginRight="10dp"
                 android:tag="@{tutorial.id}"
                 android:numStars="5"
