Fixes + Working displaying information for medic about incident

--- a/app/src/main/res/layout/fragment_check_equipment.xml
+++ b/app/src/main/res/layout/fragment_check_equipment.xml
@@ -97,6 +97,16 @@
             app:layout_constraintStart_toEndOf="@+id/ambulance_text"
             app:layout_constraintTop_toTopOf="@+id/ambulance_text" />
 
-
+        <TextView
+            android:id="@+id/no_equipment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:text="@string/ambulance_equipment_empty"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/equipment_recycler" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
