--- a/app/src/main/res/layout/fragment_paramedic_call_for_support.xml
+++ b/app/src/main/res/layout/fragment_paramedic_call_for_support.xml
@@ -103,6 +103,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/locationEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
