--- a/app/src/main/res/menu/bottom_paramedic_navigation.xml
+++ b/app/src/main/res/menu/bottom_paramedic_navigation.xml
@@ -20,4 +20,10 @@
         android:enabled="true"
         android:icon="@drawable/ic_twotone_category_24"
         android:title="@string/menu_equipment"/>
+
+    <item
+        android:id="@+id/page_4"
+        android:enabled="true"
+        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
+        android:title="@string/menu_scan"/>
 </menu>
